--- a/templates/tts.html
+++ b/templates/tts.html
@@ -217,10 +217,13 @@
                       {% elif voice_option == "sergio" %}Male, Spanish, professional
                       {% elif voice_option == "maria" %}Female, Spanish, friendly
                       
-                      <!-- Italian voices -->
+                      <!-- Italian voices
                       {% elif voice_option == "pietro" %}Male, Italian, passionate
                       {% elif voice_option == "giulia" %}Female, Italian, expressive
-                      {% elif voice_option == "carlo" %}Male, Italian, refined
+                      {% elif voice_option == "carlo" %}Male, Italian, refined -->
+
+                      <!-- Bengla voices --> 
+                      {% elif voice_option == "bengla" %}Female, Bengla, passionate
 
                       <!-- Urdu voices --> 
                       {% elif voice_option == "idk_female" %}Female, Urdu, passionate 
